# HiveHub

./: .gitignore  LICENSE  README
App/: CMakeLists.txt
App/App/: App.cpp  App.h  CMakeLists.txt  main.cpp  main.h  user_interface.cpp  user_interface.h
App/App/Database/: database_controller.h  database_init.cpp  database_read_logic.cpp  database_save_logic.cpp  line_parser.cpp  line_parser.h
App/App/Methods/: add_person.cpp  add_person.h  display_tool.cpp  edit_tool.cpp  edit_tool.h  methods.h
App/App/Methods/Display_Methods/: display_by_email.cpp  display_by_interests.cpp  display_methods.h
App/App/Methods/Edits_Methods/: edit_first_name.cpp  edit_interests.cpp  edit_last_name.cpp  edit_methods.h  remove_person.cpp  remove_person.h
App/App/config/: config.h  config_manager.cpp  console_utils.h  database_init.cpp  set_console.cpp
App/HiveHub/: CMakeLists.txt  common_includes.h  main.cpp  main.h
App/HiveHub/Config/: config.h  config_manager.cpp  console_utils.h  database_init.cpp  database_setup.cpp
App/HiveHub/Database/: database_controller.h  database_read_logic.cpp  database_save_logic.cpp  line_parser.cpp
App/HiveHub/Methods/: add_person.cpp  methods.h  miscellaneous_functions.cpp  person_addition.cpp  validation.cpp
App/HiveHub/Methods/Display_Methods/: display_by_email.cpp  display_by_interests.cpp  display_everyone.cpp  display_methods.h
App/HiveHub/Methods/Edits_Features/: edit_first_name.cpp  edit_interests.cpp  edit_last_name.cpp  edit_methods.h  remove_person.cpp
App/HiveHub/Methods/Edits_Methods/: edit_first_name.cpp  edit_interests.cpp  edit_last_name.cpp  remove_person.cpp
App/HiveHub/Methods/GUI_Features/: main_menu_interface.cpp  user_display_tool.cpp  user_edit_tool.cpp  user_interface.h
App/HiveHub/Methods/GUI_Methods/: display_tool.cpp  edit_tool.cpp  user_interface.cpp  user_interface.h
App/HiveHub/Methods/User_Display_Features/: display_all_users.cpp  display_by_email.cpp  display_by_interests.cpp  display_features.h
Doc/: HiveHub-Doc.docx
Doc/Block_Schemes/: .$MAIN.drawio.bkp  .$logic_block_scheme.drawio.bkp  .$logic_block_scheme.drawio.dtmp  .$userCreator.drawio.bkp  .$userCreator.drawio.dtmp  MAIN.drawio  display_by_interests_block_scheme.drawio  logic_block_scheme.drawio  userCreator.drawio  user_add_block_scheme.drawio
Doc/Documents/: HiveHub-Doc.docx  ~$veHub-Doc.docx
